# universal-starter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt
src/apps/example/: CMakeLists.txt  example.cpp
src/example/: example.cpp
test/example/: CMakeLists.txt  example.cpp
